ui/web_modules/sourcegraph/blob/styles/Monaco.css
/* ... */
:global .monaco-tree .monaco-tree-rows > .monaco-tree-row > .content > .sidebar-references > .code-content > .function .author-details .name {
	display: inline-block;
	padding-left: 6px;
}

:global .monaco-tree .monaco-tree-rows > .monaco-tree-row > .content > .sidebar-references > .code-content > .function .author-details {
	padding-top: 10px;
	color: #5d7eac;
}

:global .monaco-tree .monaco-tree-rows > .monaco-tree-row > .content > .sidebar-references > .code-content > .function .file-details {
	padding-top: 10px;
	color: #5d7eac;
	overflow: hidden;
	text-overflow: ellipsis;
	direction: rtl;
	text-align: left;
}

:global .monaco-tree .monaco-tree-rows > .monaco-tree-row > .content > .sidebar-references > .code-content > .divider-container {
	padding-top: 10px;
	width: 100%;
}

:global .monaco-tree .monaco-tree-rows > .monaco-tree-row > .content > .sidebar-references > .code-content > .divider-container > .divider {
	width: 100%;
	height: 1px;
	background-color: rgba(201, 211, 227, 0.3);
}

:global .vs-dark .sg-sidebar .monaco-tree div.monaco-tree-row:hover:not(.highlighted):not(.selected):not(.focused) {
  background-color: #1893e7;
  color: white;
}

:global .vs-dark .sg-sidebar .monaco-tree div.monaco-tree-row:hover:not(.highlighted):not(.selected):not(.focused) .content > .sidebar-references > .code-content > .function .author-details {
	color:  #ade0ff;
}

:global .vs-dark .sg-sidebar .monaco-tree div.monaco-tree-row:hover:not(.highlighted):not(.selected):not(.focused) .content > .sidebar-references > .code-content > .function .file-details {
	color:  #ade0ff;
}

:global .monaco-tree .monaco-tree-rows > .monaco-tree-row > .content > .reference-file > .monaco-left-right-widget > .right > .workspace-references-badge-external  {
	color: white;
	background-color: c_orange_L1;
	padding: 4px;
	border-radius: 3px;
}

:global .monaco-tree .monaco-tree-rows > .monaco-tree-row > .content > .reference-file > .monaco-left-right-widget > .right > .workspace-references-badge-local  {
	color: white;
	background-color: c_green;
	padding: 4px;
	border-radius: 3px;
}

:global .sg-sidebar .monaco-tree > .monaco-scrollable-element {
	position: absolute !important;
	top: 0px;
	bottom: 0px;
	left: 0px;
	right: 0px;
}

:global .sg-sidebar .monaco-tree {
	flex: 1 1 auto;
}

:global #workbench\.editors\.stringEditor {
	margin-left: 5px;
}

:global .monaco-editor.vs-dark .view-overlays .selected-text {
	background-color: #0091ea !important;
}

